--- a/src/style/global.css
+++ b/src/style/global.css
@@ -1,9 +1,18 @@
 * {
     box-sizing: border-box;
+    position: relative;
     transition: .2s;
 }
 
 body {
     margin: 0;
     padding: 0;
+}
+
+.flex {
+    display: flex;
+}
+
+.absolute {
+    position: absolute;
 }
