--- a/src/style/global.css
+++ b/src/style/global.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    transition: background-color 0.5s, color 0.5s;
+    /* transition: background-color 0.5s, color 0.5s; */
     background-color: var(--background);
     color: var(--text-primary);
     margin: 0;
