--- a/src/style/global.css
+++ b/src/style/global.css
@@ -77,3 +77,11 @@ body.light-mode {
 .absolute {
     position: absolute;
 }
+
+.text-title {
+    font-size: 1.875rem;
+}
+
+.text-center {
+    text-align: center;
+}
