--- a/src/style/global.css
+++ b/src/style/global.css
@@ -1,6 +1,7 @@
 * {
     box-sizing: border-box;
     position: relative;
+    font-family: 'Poppins', sans-serif;
     transition: .2s;
 }
 
@@ -76,6 +77,10 @@ body.light-mode {
 
 .absolute {
     position: absolute;
+}
+
+.full-screen-height {
+    height: 100vh;
 }
 
 .text-title {
