--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,7 +1,7 @@
 /*  */
 .intro {
     position: fixed;
-    z-index: 9999999;
+    z-index: 999;
     left: 0;
     top: 0;
     width: 100%;
@@ -56,5 +56,6 @@
 
 .toggle {
     cursor: pointer;
+    z-index: 99;
 }
 
