--- a/src/style/style.css
+++ b/src/style/style.css
@@ -6,7 +6,7 @@
     top: 0;
     width: 100%;
     height: 100vh;
-    background: #161616;
+    background: #171717;
     transition: 1s;
 }
 
@@ -25,7 +25,7 @@
     font-family: 'Titillium Web', sans-serif;
     position: relative;
     display: inline-block;
-    bottom: -20%;
+    bottom: 0;
     opacity: 0;
 }
 
@@ -59,3 +59,69 @@
     z-index: 99;
 }
 
+.background-gradient {
+    height: 200px;
+    width: 200px;
+    top: 50%;
+    left: 50%;
+    border-radius: 50%;
+    filter: blur(30px);
+}
+
+body.light-mode .background-gradient {
+    --bg-gradient1: rgba(255, 255, 0, 0.375);
+    --bg-gradient2: rgba(128, 0, 128, 0.375);
+}
+
+body.dark-mode .background-gradient {
+    --bg-gradient1: rgba(255, 255, 0, 0.5);
+    --bg-gradient2: rgba(128, 0, 128, 0.675);
+}
+
+.background-gradient.idx1 {
+    transform: translate(-80%, -80%);
+    animation: bg-random2 30s infinite;
+    transition: all .2s;
+}
+
+.background-gradient.idx2 {
+    transform: translate(-30%, -30%);
+    animation: bg-random1 30s infinite;
+    transition: all .2s;
+}
+
+@keyframes bg-random1 {
+    0% {
+        background: radial-gradient(rgba(0, 255, 255, 0.5), transparent);
+    }
+
+    49% {
+        background: radial-gradient(rgba(0, 255, 255, 0.5), transparent);
+    }
+
+    50% {
+        background: radial-gradient(var(--bg-gradient1), transparent);
+    }
+
+    100% {
+        background: radial-gradient(var(--bg-gradient1), transparent);
+    }
+}
+
+@keyframes bg-random2 {
+    0% {
+        background: radial-gradient(rgba(255, 192, 203, 1), transparent);
+    }
+
+    49% {
+        background: radial-gradient(rgba(255, 192, 203, 1), transparent);
+    }
+
+    50% {
+        background: radial-gradient(var(--bg-gradient2), transparent);
+    }
+
+    100% {
+        background: radial-gradient(var(--bg-gradient2), transparent);
+    }
+}
