--- a/src/style/style.css
+++ b/src/style/style.css
@@ -22,7 +22,7 @@
 
 .logo {
     color: #fff !important;
-    font-family: 'Titillium Web', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     position: relative;
     display: inline-block;
     bottom: 0;
