--- a/src/style/global.css
+++ b/src/style/global.css
@@ -1,7 +1,8 @@
 * {
     box-sizing: border-box;
     position: relative;
-    font-family: 'Poppins', sans-serif;
+    /* font-family: 'Poppins', sans-serif; */
+    font-family: 'Montserrat', sans-serif;
     transition: .2s;
 }
 
@@ -11,7 +12,6 @@
 }
 
 body {
-    /* transition: background-color 0.5s, color 0.5s; */
     background-color: var(--background);
     color: var(--text-primary);
     margin: 0;
@@ -97,7 +97,7 @@ body.light-mode {
 }
 
 .gap-small {
-    gap: 12px;
+    gap: 8px;
 }
 
 .gap-medium {
