--- a/src/style/style.css
+++ b/src/style/style.css
@@ -21,6 +21,7 @@
 }
 
 .logo {
+    font-size: 1.5em;
     color: #fff !important;
     font-family: 'Montserrat', sans-serif;
     position: relative;
