--- a/src/style/style.css
+++ b/src/style/style.css
@@ -22,9 +22,9 @@
 
 .logo {
     font-weight: bold;
-    font-size: 1.5em;
+    font-size: 4em;
     color: #fff !important;
-    font-family: 'Syne', sans-serif;
+    font-family: 'Saira Extra Condensed', sans-serif;
     position: relative;
     display: inline-block;
     bottom: 0;
