--- a/src/style/style.css
+++ b/src/style/style.css
@@ -21,10 +21,10 @@
 }
 
 .logo {
-    font-weight: bold;
-    font-size: 2em;
+    /* font-weight: bold; */
+    font-size: 24px;
     color: #fff !important;
-    font-family: 'Saira Extra Condensed', sans-serif;
+    /* font-family: 'Saira Extra Condensed', sans-serif; */
     position: relative;
     display: inline-block;
     bottom: 0;
