--- a/src/style/global.css
+++ b/src/style/global.css
@@ -15,6 +15,8 @@ body {
     color: var(--text-primary);
     margin: 0;
     padding: 0;
+    --small: 8px;
+    --medium: 16px;
 }
 
 body.dark-mode {
@@ -41,6 +43,11 @@ body.light-mode {
     --border: 1px solid #00000014;
 }
 
+
+.container {
+    min-height: 200vh;
+}
+
 .wrapper {
     height: 100%;
     width: 100%;
@@ -53,6 +60,14 @@ body.light-mode {
 
 .flex {
     display: flex;
+}
+
+.space-between {
+    justify-content: space-between;
+}
+
+.flex-1 {
+    flex: 1;
 }
 
 .row {
@@ -68,6 +83,10 @@ body.light-mode {
     justify-content: center;
 }
 
+.center-align-parent {
+    justify-content: center;
+}
+
 .center-children {
     top: 50%;
     left: 50%;
@@ -78,25 +97,42 @@ body.light-mode {
     margin: 0 auto;
 }
 
+.justify-content-end {
+    justify-content: end;
+}
+
+.gap-box-medium {
+    height: 12px;
+    width: 12px;
+}
+
 .absolute {
     position: absolute;
 }
 
-.full-screen-height * {
-    transition: .2s;
+.bottom {
+    bottom: 0;
 }
 
 .full-screen-height {
     height: 100vh; 
 }
 
+.wide-screen-height {
+    aspect-ratio: 21 / 9;
+}
+
 .text-title {
-    font-size: 1.5rem;
-    /* font-size: 1.875rem; */
+    font-size: 24px;
 }
 
 .text-center {
     text-align: center;
+}
+
+.text-small {
+    font-size: 12px;
+    color: var(--text-secondary);
 }
 
 .gap-small {
@@ -105,4 +141,40 @@ body.light-mode {
 
 .gap-medium {
     gap: 16px;
+}
+
+.padding-medium {
+    padding: var(--medium);
+}
+
+.padding-small {
+    padding: var(--small);
+}
+
+.width {
+    width: 100%;
+}
+
+a.button {
+    text-decoration: none;
+    font-size: 12px;
+    padding: 8px 16px;
+    border: 1px solid gray;
+    border-radius: 24px;
+    background: var(--background);
+    color: var(--text-primary);
+}
+
+a.button.cta {
+    color: var(--background);
+    background: linear-gradient(90deg, pink, aqua);
+    border: none;
+}
+
+.circle {
+    border-radius: 100%;
+}
+
+.border {
+    border: 1px solid var(--text-secondary);
 }
