--- a/src/style/style.css
+++ b/src/style/style.css
@@ -34,6 +34,10 @@
     justify-content: space-between;
 }
 
+#bottom-content .text-small {
+    display: none;
+}
+
 #bottom-content.active {
     transition: .5s;
     opacity: 1;
