--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,7 +1,14 @@
-#preloader.nav {
-    transition: .5s;
+#preloader.full-screen-height {
+    height: 100vh;
+    width: 100%;
+    background: var(--background);
     position: fixed;
-    height: max-content;
+}
+
+#preloader.full-screen-height.nav {
+    height: 0;
+    transition: .75s ease-in-out;
+    position: fixed;
     width: 100%;
 }
 
@@ -100,16 +107,20 @@ body.dark-mode #themes-mode {
     top: 0;
     width: 0;
     overflow: hidden;
+    opacity: 0;
 }
 
 #menu-toggle.active {
-    width: 61px;
+    width: max-content;
+    opacity: 1;
 }
 
 #nav,
 #preloader {
     z-index: 99;
 }
+
+#landing-page {}
 
 #landing-page .gap {
     gap: 30px;
