--- a/src/style/style.css
+++ b/src/style/style.css
@@ -122,7 +122,7 @@ body.dark-mode #themes-mode {
 }
 
 #landing-page {
-    padding-bottom: 2%;
+    padding-bottom: 4vw;
 }
 
 #landing-page 
@@ -141,5 +141,5 @@ body.dark-mode #themes-mode {
 
 #object {
     z-index: 99;
-    transform: translate(-50%, 0);
+    transform: translate(-50%, -32px);
 }
