--- a/src/style/style.css
+++ b/src/style/style.css
@@ -2,13 +2,13 @@
     height: 100vh;
     width: 100%;
     background: var(--background);
-    transition: 1s ease-in-out;
+    transition: 1s ease;
     position: fixed;
 }
 
 #preloader.full-screen-height.nav {
     height: 0;
-    transition: 1s ease-in-out;
+    transition: 1s ease;
     position: fixed;
     width: 100%;
 }
@@ -91,16 +91,15 @@
 }
 
 body.light-mode #themes-mode {
-    border-radius: 50px;
     background: linear-gradient(145deg, #cacaca, #ffffff);
     box-shadow: 5px 5px 10px #bebebe,
         -5px -5px 10px #ffffff;
 }
 
 body.dark-mode #themes-mode {
-    background: linear-gradient(145deg, #141414, #181818);
-    box-shadow: 7px 7px 14px #131313,
-        -7px -7px 14px #191919;
+    background: linear-gradient(145deg, #151515, #191919);
+    box-shadow: 5px 5px 10px #090909,
+        -5px -5px 10px #252525;
 }
 
 #themes-mode.gap {
@@ -129,8 +128,7 @@ body.dark-mode #themes-mode {
     padding-bottom: 4vw;
 }
 
-#landing-page 
-.text-typhograpy {
+#landing-page .text-typhograpy {
     font-family: 'Roboto Condensed', sans-serif;
     /* font-weight: 700; */
     font-size: 8vw;
@@ -138,8 +136,7 @@ body.dark-mode #themes-mode {
     margin: -16px 0;
 }
 
-#landing-page 
-.text-small {
+#landing-page .text-small {
     top: -50px;
 }
 
