--- a/src/style/cursor.css
+++ b/src/style/cursor.css
@@ -23,11 +23,14 @@
 .grow,
 .grow-small {
     transform: scale(12);
-    background: gold;
     mix-blend-mode: difference;
     border: none;
 }
 
 .grow-small {
     transform: scale(2);
+}
+
+.cursor.idx2 {
+    background: red;
 }
