--- a/src/style/cursor.css
+++ b/src/style/cursor.css
@@ -5,8 +5,8 @@
     margin-left: -8px;
     margin-top: -8px;
     border-radius: 100%;
-    border: 2px solid gold;
-    background: gold;
+    border: 2px solid red;
+    background: red;
     transition: transform .25s ease,
         .25s ease;
     transform-origin: center center;
@@ -32,5 +32,5 @@
 }
 
 .cursor.idx2 {
-    background: red;
+    background: gold;
 }
