--- a/src/style/style.css
+++ b/src/style/style.css
@@ -130,10 +130,10 @@ body.dark-mode #themes-mode {
 
 #landing-page .text-typhograpy {
     font-family: 'Roboto Condensed', sans-serif;
-    /* font-weight: 700; */
-    font-size: 8vw;
     text-transform: capitalize;
-    margin: -16px 0;
+    font-size: 8vw;
+    margin: -5% 0;
+    letter-spacing: -.25vw;
 }
 
 #landing-page .text-small {
