--- a/src/style/responsive.css
+++ b/src/style/responsive.css
@@ -20,8 +20,8 @@
     }
 
     #landing-page .text-typhograpy {
-        font-size: 24vw;
-        margin: -12px;
+        font-size: 30vw;
+        margin: -8%;
     }
 }
 
