--- a/src/style/responsive.css
+++ b/src/style/responsive.css
@@ -23,6 +23,13 @@
         font-size: 30vw;
         margin: -8%;
     }
+
+    .paragraph.large {
+        font-size: 24px;
+        /* max-width: calc(100vw - (var(--medium) * 4)); */
+        max-width: 80vw;
+        text-align: justify;
+    }
 }
 
 @media screen and (min-width: 1080px) {
