--- a/src/style/responsive.css
+++ b/src/style/responsive.css
@@ -26,14 +26,8 @@
 
     .paragraph.large {
         font-size: 24px;
-        /* max-width: calc(100vw - (var(--medium) * 4)); */
         max-width: 80vw;
-        text-align: justify;
     }
 }
 
-@media screen and (min-width: 1080px) {
-    .text-title {
-        /* font-size: 32px; */
-    }
-}
+@media screen and (min-width: 1080px) {}
