--- a/src/style/responsive.css
+++ b/src/style/responsive.css
@@ -1,6 +1,6 @@
 @media screen and (max-width: 767px) {
     #landing-page .typhography {
-        font-size: calc(100vw / 3) !important;
+        font-size: 30vw !important;
     }
 }
 
