--- a/src/style/cursor.css
+++ b/src/style/cursor.css
@@ -7,8 +7,8 @@
     border-radius: 100%;
     border: 2px solid red;
     background: red;
-    transition: transform .25s ease,
-        .25s ease;
+    transition: transform 200ms ease,
+        200ms ease;
     transform-origin: center center;
     pointer-events: none;
     z-index: 999;
