--- a/src/style/responsive.css
+++ b/src/style/responsive.css
@@ -18,7 +18,7 @@
 
     #landing-page .typhography {
         font-size: 30vw !important;
-    }
+    }w
 
     #about-me-page .flex-1,
     .flex-2,
